--- a/src/App.css
+++ b/src/App.css
@@ -629,6 +629,37 @@ a.footerLink:hover {
 .loginConatinerFooter {
   margin-top: 133px;
 }
+
+.tankYouShopping {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--white-color);
+  padding: 20px;
+  border-radius: 7px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.tankYouShopping > h1 {
+  margin-bottom: 0px;
+  color: var(--second-color);
+  font-size: 2.5rem;
+  font-family: var(--bold-font-family);
+}
+
+.tankYouShopping > p:first-child {
+  margin-bottom: 0px;
+}
+
+.tankYouShopping > p:last-child {
+  margin-top: 0px;
+  margin-bottom: 40px;
+}
+
 /****************************************************************
                         SMARTPHONE
 ****************************************************************/
